修改了分辨率显示